Fixing the spacing between scenter and next line

--- a/scenter_static/css/tutorial.css
+++ b/scenter_static/css/tutorial.css
@@ -56,6 +56,7 @@ body, html {
 
 .intro-message > h1, h2, h3 {
 	font-family: 'Imprima', sans-serif;
+	margin-top: 10px;
 }
 
 .intro-message > h4 {
